--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.8.35",
     "flat": "^5.0.2",
     "fsevents": "^2.1.3",
+    "gmap-vue": "^1.4.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "laravel-mix-versionhash": "^1.0.8",
