--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@vue/cli": "^4.4.6",
+    "apexcharts": "^3.22.0",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
@@ -38,6 +39,7 @@
     "vee-validate": "^3.3.9",
     "vform": "^1.0.1",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-cli": "^2.9.6",
     "vue-codemirror": "^4.0.6",
@@ -52,7 +54,8 @@
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0",
     "vuex-router-sync": "^5.0.0",
-    "yargs-parser": "^19.0.1"
+    "yargs-parser": "^19.0.1",
+    "zingchart-vue": "^2.0.3"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
