--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0",
     "vuex-router-sync": "^5.0.0",
+    "wicket": "^1.3.6",
     "yargs-parser": "^19.0.1",
     "zingchart-vue": "^2.0.3"
   },
