--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "apexcharts": "^3.22.0",
     "axios": "^0.18.1",
     "chokidar": "^3.4.2",
+    "css-loader": "^3.6.0",
     "dayjs": "^1.8.35",
+    "file-loader": "^6.1.1",
     "flat": "^5.0.2",
     "fsevents": "^2.1.3",
     "gmap-vue": "^1.4.0",
@@ -34,6 +36,7 @@
     "popper.js": "^1.16.1",
     "rfs": "^9.0.3",
     "secure-ls": "^1.2.6",
+    "style-loader": "^2.0.0",
     "sweetalert2": "^8.19.0",
     "swiper": "^5.2.0",
     "vee-validate": "^3.3.9",
